hide scrollbar + fix header issue + click to scroll on about

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 100;
-  min-height: 4rem;
+  height: 3.75rem;
   display: flex;
   align-items: center;
   backdrop-filter: blur(5px);
@@ -60,17 +60,15 @@
   position: relative;
 }
 
-@media (--screen-xs) {
-  .mobileMenuOpen .navInner {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.95);
-    z-index: 100;
-    padding: 0.5rem 1rem;
-    box-sizing: border-box;
-  }
+.mobileMenuOpen .navInner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  z-index: 100;
+  padding: 0.5rem 1rem;
+  box-sizing: border-box;
 }
 
 .emailIcon:hover {
